# vcard_parser

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: constants.rs  error.rs  lib.rs  traits.rs  util.rs
src/parse/: delimiters.rs  encoding.rs  mod.rs  parameter.rs  property.rs  value.rs  vcard.rs
src/vcard/: mod.rs
src/vcard/parameter/: mod.rs  parameter_altid.rs  parameter_calscale.rs  parameter_cc.rs  parameter_geo.rs  parameter_index.rs  parameter_label.rs  parameter_language.rs  parameter_level.rs  parameter_mediatype.rs  parameter_pid.rs  parameter_pref.rs  parameter_sortas.rs  parameter_type.rs  parameter_tz.rs  parameter_value.rs  parameter_xname.rs  types.rs
src/vcard/properties/: adr.rs  anniversary.rs  bday.rs  birthplace.rs  caladruri.rs  caluri.rs  categories.rs  clientpidmap.rs  contacturi.rs  deathdate.rs  deathplace.rs  email.rs  expertise.rs  fburl.rs  fn.rs  gender.rs  geo.rs  hobby.rs  impp.rs  interest.rs  key.rs  kind.rs  lang.rs  logo.rs  member.rs  mod.rs  n.rs  nickname.rs  note.rs  org.rs  orgdirectory.rs  photo.rs  prodid.rs  related.rs  rev.rs  role.rs  sound.rs  source.rs  tel.rs  title.rs  (+5 more)
src/vcard/property/: mod.rs  property_adr.rs  property_anniversary.rs  property_bday.rs  property_birthplace.rs  property_caladruri.rs  property_caluri.rs  property_categories.rs  property_clientpidmap.rs  property_contacturi.rs  property_deathdate.rs  property_deathplace.rs  property_email.rs  property_expertise.rs  property_fburl.rs  property_fn.rs  property_gender.rs  property_geo.rs  property_hobby.rs  property_impp.rs  property_interest.rs  property_key.rs  property_kind.rs  property_lang.rs  property_logo.rs  property_member.rs  property_n.rs  property_nickname.rs  property_note.rs  property_org.rs  property_orgdirectory.rs  property_photo.rs  property_prodid.rs  property_related.rs  property_rev.rs  property_role.rs  property_sound.rs  property_source.rs  property_tel.rs  property_title.rs  (+6 more)
src/vcard/value/: mod.rs  value_boolean.rs  value_clientpidmap.rs  value_date.rs  value_float.rs  value_integer.rs  value_languagetag.rs  value_pid.rs  (+6 more)
tests/: mod.rs
tests/assets/: concat.vcf  multiple.vcf  photo.vcf  single.vcf
(+3 files in other folders)
