[package]
name = "vcard_parser"
version = "0.2.0"
authors = ["Norman Kerr"]
edition = "2021"
description = "Parses and validates vCard data according to RFC 6350 specification."
readme = "README.md"
license = "MIT"
repository = "https://github.com/kenianbei/vcard_parser"
documentation = "https://docs.rs/vcard_parser"
keywords = ["vcard", "parser", "rfc6350"]
categories = ["parsing", "data-structures", "email", "encoding"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
language-tags = "0.3.2"
nom = "7.1.3"
time = { version = "0.3.17", features = ["parsing", "formatting"] }
url = "2.3.1"
